# Schedulify

./: .gitignore  LICENSE  README.md
backend/: .env.example  DockerFile  build.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: constraints.py  institution.py  timetable.py
backend/app/routes/: auth.py  institutions.py  timetable.py
backend/app/services/: firebase_service.py  genetic_algorithm.py  timetable_optimizer.py
backend/app/utils/: constraints_checker.py  export_utils.py
frontend/: .env.local.example  .eslintrc.json  next.config.js  package.json  prettier.config.js  tailwind.config.js
frontend/components/: Dashboard.jsx  ExportOptions.jsx  InputForm.jsx  TimetableDisplay.jsx  TimetableGenerator.jsx
frontend/components/ui/: Button.jsx  InputForm.jsx  TimetableDisplay.jsx  TimetableGenerator.jsx  alert.jsx  badge.jsx  card.jsx  checkbox.jsx  input.jsx  label.jsx  select.jsx  tabs.jsx  textarea.jsx
frontend/lib/: api.js  firebase.js  utils.js
frontend/pages/: _app.js  index.js
frontend/styles/: globals.css
